src/test/ui/writing-to-immutable-vec.nll.stderr
error[E0596]: cannot borrow `v` as mutable, as it is not declared as mutable
  --> $DIR/writing-to-immutable-vec.rs:3:5
   |
LL |     let v: Vec<isize> = vec![1, 2, 3];
   |         - help: consider changing this to be mutable: `mut v`
LL |     v[1] = 4;
   |     ^ cannot borrow as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
